--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "autoprefixer": "10.4.5"
     },
     "version": "0.1.0",
+    "type": "module",
     "private": true,
     "dependencies": {
         "@emotion/react": "^11.9.3",
@@ -42,5 +43,10 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gulp": "^4.0.2",
+        "gulp-sass": "^5.1.0",
+        "sass": "^1.53.0"
     }
 }
